--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,17 +1,17 @@
-:root{
-  --main-color:#9d5fff;
-  --main-dark-color: #511e7c;
+:root {
+	--main-color: #9d5fff;
+	--main-dark-color: #511e7c;
 }
-*{
-  margin: 0px;
-  padding: 0px;
-  color: var(--main-color);
-  font-family: 'Roboto', sans-serif;
+* {
+	margin: 0px;
+	padding: 0px;
+	color: var(--main-color);
+	font-family: "Roboto", sans-serif;
 }
-*:focus{
-  outline: none;
+*:focus {
+	outline: none;
 }
-body{
-  background-color: black;
-  overflow: hidden;
+body {
+	background-color: black;
+	overflow: hidden;
 }
