--- a/client/src/home/home.css
+++ b/client/src/home/home.css
@@ -1,8 +1,6 @@
 .HomeMainContainer {
-	position: absolute;
-	top: 0px;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	min-height: fit-content;
 	background: url("fondo.svg") no-repeat right scroll;
 	display: flex;
 	flex-direction: column;
@@ -90,6 +88,7 @@
 		display: block;
 		color: red;
 		font-size: 0.8rem;
+		margin-top: 50px;
 	}
 
 	.homeMain {
