--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,12 @@
 *:focus {
 	outline: none;
 }
+body,
+html {
+	width: 100%;
+	height: 100%;
+}
 body {
 	background-color: black;
-	overflow: hidden;
+	overflow-x: hidden;
 }
